# AgenticBobs

./: .env  .gitignore  FUNCTIONALITY_INVENTORY.md  OVERLAP_AND_SPRAWL_ANALYSIS.md  README.md  REORGANIZATION.md  a_thing.ipynb  agent_structure.ipynb  core  demo_agent_validation.py  main.py  main2.py  marvin_scripts  process_analysis.ipynb  process_kit.py  process_visuals.ipynb  pyproject.toml  pytest.ini  sample.txt  start.sh  test_advanced_layout.py  test_bob2_consistency.py  test_bob2_debug.py  test_bobs_flow.py  test_cycle_result.bpmn  test_follow_up_api.py  test_layout_quality.py  test_new_structure.py  test_simple_components.py  test_task_result.py  test_xml_only.py  try_egraphs.ipynb  workgraph.schema.json
backend/: bpmn_layout.py  dev_server.py  main.py  main_clean.py  main_corrupted.py  requirements.txt
core/: ai.py  pir.py  process_dsl.py  validators.py  viz.py
core/adapters/: bpmn.py  bpmn_min.py
core/visualizers/: notebook_visualizers.py
core/vizualizers/: notebook_visualizers.py
data/: README.md
data/samples/: generated.bpmn
docs/: ARCHITECTURE.md  MARVIN_INTEGRATION.md  README.md  THE_BOBS_2_README.md
docs/unified_spec/: MASTER_TASK_LIST.md
examples/: swimlane_demo.py
examples/unified_spec/: customer_support.json  rfp_triage.json
marvin_scripts/: __init__.py  common.py  detect_type.py  generate_xml.py  pipeline.py
notebooks/: README.md
notebooks/analysis/: process_analysis_recovered.ipynb  process_visuals.ipynb
notebooks/demos/: agent_structure.ipynb  show_process_validator_working.ipynb
notebooks/experiments/: a_thing.ipynb  process_mutations.ipynb
scripts/: fetch_viewer_assets.py
sim_dsl/: __init__.py  resources.py  steady_state.py  time_units.py
sim_dsl/tests/: test_adapter.py  test_simulate_new.py  test_steady_state_integration.py
src/agentic_process_automation/: __init__.py  config.py  main.py
src/agentic_process_automation/api/: main.py
src/agentic_process_automation/app/: __init__.py  editors.py  main.py  main2.py
src/agentic_process_automation/cli/: README.md  __init__.py  common.py  detect_type.py  generate_refinement_questions.py  generate_xml.py  pipeline.py  validate_bpmn.py
src/agentic_process_automation/core/: __init__.py  ai.py  ai_service.py  bpmn_validator.py  common.py  dmn_validator.py  events.py  pir.py  resources.py  scenario.py  semantics.py  services.py  sim.py  stochastic.py  viz.py
src/agentic_process_automation/frontends/: base.py
src/agentic_process_automation/ops/: __init__.py  optimize_roster.py  storage.py  telemetry.py  tracking.py
src/agentic_process_automation/qa/: __init__.py  conformance_pm4py.py
tests/: __init__.py  conftest.py  helpers.py  marv_test.py  test_advanced_layout.py  test_agent_functionality.py  test_agent_workflow.py  test_ai_helpers.py  test_bob2_consistency.py  test_bob2_debug.py  test_bobs_flow.py  test_bpmn_min.py  test_cycle_layout.py  test_follow_up_api.py  test_layout_quality.py  test_marvin_integration.py  test_pir.py  test_pir_archimate.py  test_representations.py  test_semantics.py  test_sim_smoke.py  test_simple_components.py  test_task_result.py  test_unified_spec.py  test_viz.py  test_xml_only.py
tests/api/: test_main.py
tests/core/unified_spec/: test_case_state_manager.py  test_dispatcher.py  test_executors.py  test_interpreter.py  test_lint.py  (+4 more)
thebobs/: package-lock.json  package.json
thebobs/src/: App.vue  style.css
viz/: __init__.py
viz/bpmn_dmn_component/: __init__.py  _component.py
(+33 files in other folders)
