[project]
name = "agenticbobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.6",
    "httpx>=0.27.2",
    "cytoolz>=0.12.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "simpy>=4.1.1",
    "streamlit>=1.36.0",
    "ipywidgets>=8.1.0",
    "anywidget>=0.9.0",
    "jupyterlab-widgets>=3.0.10",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "egglog>=11.0.0",
    "marvin>=3.1.4",
    "spiffworkflow>=3.1.1",
    "result>=0.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
